--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>title</title>
+</head>
+<body>
+    <h1>Hi! My name is Luca.</h1>
+    <h2>And I am a web developer. Look at my projects!</h2>
+    
+    <hr/>
+    <h3><a href="./public/birthday-invite.html">The birthday invite project</a></h3>
+    <img src="./assets/images/Luca's birthday project.jpg" alt="birthday-invite" height="400">
+    
+    <hr/>
+    <h3><a href="./public/movie-ranking.html">The movie ranking project</a></h3>
+    <img src="./assets/images/Best movie according to Luca.jpg" alt="movie-ranking" height="250">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<hr/>
+<a href="./public/about.html">About me</a>  
+<a href="./public/contact.html">Contact me</a>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</body>
+</html>
